# Computer-Carts

./: .gitignore  .gitmodules  Computer Cart Management Software.sln  ComputerCartClientSoftware.py  ComputerCartMS.kv  README.md  automatedComputerCartSystem.ino  carts.sql  computerCartdbCSV  computerCartdbCSV.csv  computerCartdbSQL
Computer Cart Client Software/: .gitattributes  ComputerCart.kv  ComputerCartClientSoftware.py  ComputerCartMS.kv  config.ini  data.txt  dataKeys.py  deleted stuff  deleted stuff.txt  fixtures.py
Computer Cart Management Software/: Computer Cart Management Software.vbproj  Form1.Designer.vb  Form1.resx  Form1.vb
Computer Cart SQLITE/: ComputerCart.kv  ComputerCartClientSQLITE3.py  carts.db  config.ini  data.txt
ComputerCartQT/: AddCart.cpp  AddCart.h  AddLaptop.cpp  AddLaptop.h  Application.cpp  Application.h  CMakeLists.txt  CartModel.cpp  CartModel.h  CartView.cpp  CartView.h  ComputerCartQT  ComputerCartQT.pro  DeleteCart.cpp  DeleteCart.h  DeleteLaptop.cpp  DeleteLaptop.h  DetailView.cpp  DetailView.h  EditCart.cpp  EditCart.h  EditLaptop.cpp  EditLaptop.h  LaptopModel.cpp  LaptopModel.h  LaptopView.cpp  LaptopView.h  Laptops.cpp  Laptops.h  MainWindow.cpp  MainWindow.h  Makefile  Palette.h  ResModel.cpp  ResModel.h  ResView.cpp  ResView.h  Session.h  Settings.cpp  Settings.h  (+15 more)
ComputerCartQT2/: AddCart.cpp  AddCart.h  Application.cpp  Application.h  CartModel.cpp  CartModel.h  CartView.cpp  CartView.h  ComputerCartQT2.pro  EditCart.cpp  EditCart.h  MainWindow.cpp  MainWindow.h  Makefile  ResModel.cpp  Session.cpp  carts.db  planning.txt
(+17 files in other folders)
